# molnex

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  pyproject.toml  zensical.toml
.devcontainer/cpu/: devcontainer.json
.devcontainer/cuda/: devcontainer.json
.github/workflows/: ci.yml
benchmarks/: conftest.py
benchmarks/bm_molix/bm_nn/: bm_scatter.py
benchmarks/bm_molrep/bm_interaction/: bm_element_update.py  bm_radial_mlp.py  bm_symmetric_contraction.py  bm_tensor_product.py
benchmarks/bm_molrep/bm_readout/: bm_product_head.py
benchmarks/bm_molzoo/: bm_allegro.py
docs/: architecture.md  component_taxonomy.md  concepts.md  index.md  tensordict_schema.md
docs/get-started/: installation.md  quick-start.md
docs/molix/: index.md  quickstart.md
docs/molix/core/: hooks.md  trainer.md
docs/molix/data/: datamodules.md  index.md  loading.md
docs/molpot/: components.md  gradients.md  index.md  quickstart.md
docs/molrep/: encoders.md  index.md  quickstart.md
docs/molrep/modules/: embedding.md
examples/: README.md  qm9_energy_prediction.py
src/molix/: F.py  __init__.py  compile.py  config.py  logger.py  logging.py
src/molix/F/: __init__.py  locality.py  pot.py  scatter.py
src/molix/core/: __init__.py  hooks.py  metrics.py  protocols.py  state.py  trainer.py
src/molix/data/: README.md  __init__.py  atom_td.py  atomic_td.py  cache.py  collate.py  datamodule.py  dataset.py  ddp.py  execute.py  identity.py  node.py  ops.py  pipeline.py  (+5 more)
src/molnex/: __init__.py
src/molpot/: F.py  README.md  __init__.py  pyproject.toml
src/molpot/composition/: __init__.py  composer.py  heads.py  multi_head.py  pooling.py
src/molpot/data/: __init__.py  atomic_td.py
src/molpot/derivation/: __init__.py  energy_aggregation.py
src/molpot/feats/: __init__.py  cutoff.py  geometry.py  rbf.py
src/molpot/graph/: __init__.py  radius_graph.py
src/molpot/heads/: __init__.py  energy.py  force.py  heads.py
src/molpot/losses/: __init__.py  combined.py  energy.py  force.py  losses.py
src/molpot/models/: __init__.py
src/molpot/models/pinet/: __init__.py  model.py
src/molpot/models/pinet2/: __init__.py  model.py
src/molpot/nn/: __init__.py  mlp.py
src/molpot/pooling/: __init__.py  edge_to_node.py  graph_pooling.py  layer_pooling.py
src/molpot/potentials/: __init__.py  angle_harmonic.py  base.py  bond_harmonic.py  dihedral_harmonic.py  lj126.py  mixing.py  nonbonded.py  polarization.py
src/molpot/readout/: __init__.py  pooling.py
src/molpot/tasks/: __init__.py  moltyp_task.py
src/molpot/tests/unit/: test_angle_harmonic.py  test_bond_harmonic.py  test_dihedral_harmonic.py  test_frame_protocol.py  test_lj126.py  test_unified_potentials.py
src/molrep/: F.py  README.md  __init__.py
src/molzoo/: README.md  __init__.py  allegro.py  mace.py
src/op/: CMakeLists.txt  functional.py
tests/: test_graph.py  test_isolation.py  test_protocols.py  test_trainer.py  utils.py
tests/test_molix/: test_compile.py  test_logging.py
tests/test_molzoo/: test_allegro.py  test_mace.py  test_mace_encoder.py  test_symmetry.py
(+166 files in other folders)
