[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "molnex"
version = "2.0.0"
description = "TensorDict-first molecular ML framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0",
  "tensordict>=0.3.0",
  "cuequivariance",
  "cuequivariance-torch",
  "molcrafts-molpy>=0.2.0",
  "pydantic"
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.scikit-build]
wheel.packages = ["src/molix", "src/molrep", "src/molpot"]
cmake.source-dir = "."
cmake.version = ">4.00.0"
