[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

[project]
name = "molpot"
version = "0.1.0"
description = "Componentized ML potential toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "tensordict>=0.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]
